--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-slot": "^1.2.2",
+    "@react-email/components": "^0.0.41",
     "@vercel/speed-insights": "^1.2.0",
     "better-auth": "^1.2.7",
     "class-variance-authority": "^0.7.1",
