--- a/package.json
+++ b/package.json
@@ -4,15 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"
+    "lint": "next lint"
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.0",
-    "@prisma/adapter-neon": "^6.7.0",
-    "@prisma/client": "^6.8.2",
     "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-slot": "^1.2.2",
@@ -20,8 +17,9 @@
     "@vercel/speed-insights": "^1.2.0",
     "better-auth": "^1.2.7",
     "class-variance-authority": "^0.7.1",
-    "client@latest": "link:prisma/client@latest",
     "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.43.1",
     "lucide-react": "^0.510.0",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
@@ -36,18 +34,15 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@prisma/nextjs-monorepo-workaround-plugin": "^6.8.2",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/ws": "^8.18.1",
-    "bufferutil": "^4.0.9",
+    "drizzle-kit": "^0.31.1",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
-    "i": "^0.3.7",
-    "prisma": "^6.8.2",
     "tailwindcss": "^4",
+    "tsx": "^4.19.4",
     "tw-animate-css": "^1.2.9",
     "typescript": "^5"
   },
