--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-email/components": "^0.0.41",
     "@vercel/speed-insights": "^1.2.0",
     "better-auth": "^1.2.7",
+    "bufferutil": "^4.0.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -50,6 +51,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/ws": "^8.18.1",
     "drizzle-kit": "^0.31.1",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
