--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "lucide-react": "^0.510.0",
     "nanoid": "^5.1.5",
     "next": "15.3.2",
+    "next-i18next": "^15.4.2",
     "next-themes": "^0.4.6",
+    "pnpm": "^10.12.1",
     "prettier": "^3.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
