wrapper para q funcione

--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
+    "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.510.0",
     "nanoid": "^5.1.5",
     "next": "15.3.2",
@@ -42,6 +45,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
+    "react-i18next": "^15.5.2",
     "resend": "^4.5.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
@@ -54,6 +58,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-i18next": "^7.8.3",
     "@types/ws": "^8.18.1",
     "drizzle-kit": "^0.31.1",
     "eslint": "^9",
